[tool.poetry]
name = "brawlbox"
version = "2.1.2"
description = "Brawl Box — the loot box simulator for Brawl Stars."
authors = ["Robin Mahieu <robin.mahieu@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
discourtesy = "^0.4.0"
dnspython = "^2.2.1"
motor = "^3.0.0"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
