[tool.poetry]
name = "brawlbox"
version = "3.0.0-dev"
description = "Brawl Box — the loot box simulator for Brawl Stars."
authors = ["Robin Mahieu <robin.mahieu@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
discourtesy = "^0.4.0"
dnspython = "^2.5.0"
motor = "^3.3.2"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
flake8 = "^7.0.0"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
