[project]
name = "brawlbox"
version = "3.0.0-dev"
description = "Brawl Box — the loot box simulator for Brawl Stars."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discourtesy>=0.4.0",
    "dnspython>=2.6.1",
    "motor>=3.5.1",
    "python-dotenv>=1.0.1",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.8.4",
]

[tool.uv.workspace]
members = ["uvtest"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
per-file-ignores = { "__init__.py" = ["F401"] }
